<resources>
    <string name="app_name">Task Reminder</string>
    <string name="description">description</string>
    <string name="add">Add Here</string>
    <string name="take_notes">Take Notes</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="settings_panel">SETTINGS PANEL</string>
    <string name="enter_text">Enter Note*</string>
    <string name="save">save</string>
    <string name="set_alarm">With Alarm</string>
    <string name="otp">OTP Received</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="login_screen">LOGIN SCREEN</string>
    <string name="login">Login</string>
    <string name="get_code">Get Code</string>
    <string name="sign_out">Sign Out</string>
    <string name="enter_description">Enter Description</string>
    <string name="saved_notes">Saved Notes</string>
    <string name="build_version">Build Version</string>
    <string name="search">Search</string>
</resources>
