<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/accentColor"
    tools:context=".SetReminder">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_notes"
            android:textColor="?attr/primaryTextColor"
            android:textSize="25sp" />

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:hint="@string/enter_text"
        android:inputType="textMultiLine|text"
        android:lineSpacingExtra="2dp"
        android:textColor="?attr/primaryTextColor"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/save"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/btn_bg"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/alarm"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/btn_bg"
            android:text="@string/set_alarm"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>