<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/themeChanger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/settings_panel"
            android:textColor="?attr/primaryTextColor"
            android:textSize="30sp" />

        <Switch
            android:id="@+id/themeSwitch"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/dark_mode"
            android:textColor="?attr/primaryTextColor"
            android:textSize="18sp"
            android:thumbTint="?attr/tabSelectedColor"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/build_version"
                android:textColor="?attr/primaryTextColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:textColor="?attr/primaryTextColor"
                android:textSize="18sp"
                tools:text="1.0.01" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signOut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:text="@string/sign_out"
                android:textColor="?attr/primaryTextColor"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/signout"
                android:textColor="?attr/primaryTextColor"
                android:textSize="28sp"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:text="New Items Will Be Added Later"
            android:textColor="?attr/secTextColor"
            android:textSize="25sp" />

    </LinearLayout>

</ScrollView>